board/dashboard_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
#    ingress.kubernetes.io/ssl-passthrough: "true"
#    nginx.ingress.kubernetes.io/secure-backends: "true"
#    nginx.org/ssl-backends: "kubernetes-dashboard"
#    kubernetes.io/ingress.allow-http: "false"

    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/use-port-in-redirects: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(/dashboard)$ /api/v1/namespaces/kube-system/services/https:kubernetes-dashboard:/proxy/#!/login permanent;
  namespace: kube-system
  name: dashboard-ingress
spec:
#  tls:
#  - hosts:
#    - elk-kuber.esb.kernel.local
#    secretName: kubernetes-dashboard-certs1
  rules:
  - host: elk-kuber.esb.kernel.local
    http:
      paths:
      - path: /dashboard
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 6443
